--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <button onclick="setHexAmount(10,7)">5 Frogs</button>
 <button onclick="setHexAmount(12,8)">6 Frogs</button>
 <h3>First Layer</h3>
-<!--<svg
+<svg
         xmlns:dc="http://purl.org/dc/elements/1.1/"
         xmlns:cc="http://creativecommons.org/ns#"
         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -1250,7 +1250,7 @@
                     id="Stitle994-3">125</title>
         </path>
     </g>
-</svg>-->
+</svg>
 
 
 
