--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         .svg-container {
             display: inline-block;
             position: relative;
-            width: 100%;
+            width: 95%;
             padding-bottom: 50%;
             vertical-align: middle;
             overflow: hidden;
@@ -45,7 +45,7 @@
             transition: 0.3s;
             font-family: sans-serif;
             font-weight: 800;
-            font-size: .85em;
+            font-size: 1.5em;
             text-transform: uppercase;
             text-align: center;
             text-decoration: none;
