--- a/index.html
+++ b/index.html
@@ -1339,12 +1339,6 @@
         ,"14"
         ,"15"
         ,"16"
-        ,"11"
-        ,"12"
-        ,"13"
-        ,"14"
-        ,"15"
-        ,"16"
         ,"20"
         ,"21"
         ,"22"
@@ -1452,6 +1446,7 @@
         for (i = 0; i < lowlands; i++) {
             let hexId = HexIds.pop()
             hillLocations.push(hexId)
+            console.log("Hill: " + hexId)
             document.getElementById(hexId.toString()).style.fill = "#FFAC00";
         }
 
@@ -1460,6 +1455,7 @@
             let hexId = HexIds.pop()
             desertLocations.push(hexId)
             document.getElementById(hexId.toString()).style.fill = "#F8FF00";
+            console.log("Desert: " + hexId)
         }
 
         // swamps
@@ -1467,12 +1463,14 @@
             let hexId = HexIds.pop()
             swampLocations.push(hexId)
             document.getElementById(hexId.toString()).style.fill = "#00BAFF";
+            console.log("Swamp: " + hexId)
         }
         // meadows
         for (i = 0; i < lowlands; i++) {
             let hexId = HexIds.pop()
             meadowLocations.push(hexId)
             document.getElementById(hexId.toString()).style.fill = "#00D014";
+            console.log("Meadow: " + hexId)
         }
 
     }
